--- a/public/scss/theme/_banner.scss
+++ b/public/scss/theme/_banner.scss
@@ -1,7 +1,7 @@
 /* banner area css
 ============================================================================================ */
 .banner-area {
-	background: url(../../images/banner-bg.png) center no-repeat;
+	// background: url(../../images/banner-bg.png) center no-repeat;
 	background-size: cover;
 	position: relative;
 	.fullscreen {
@@ -88,7 +88,7 @@
 //------- Start Bread Crumb --------//
 
 .organic-breadcrumb {
-	background: url(../images/banner-common.jpg) center no-repeat;
+	// background: url(../images/banner-common.jpg) center no-repeat;
 	background-size: cover;
 	padding-top: 130px;
 	@media (max-width: 991px) {
